<?xml version="1.0"?>
<package format="2">
  <name>object_detector</name>
  <maintainer email="r.sanjif@gmail.com">Sanjif Rajaratnam</maintainer>
  <description>Object Detection Package</description>
  <version>0.0.0</version>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend> 
  <depend>cv_bridge</depend> 
	<depend>opencv2_4</depend>
	<depend>eigen_conversions</depend>	
	<depend>boost</depend>
	<depend>eigen</depend>
	<depend>actionlib</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>image_utils</depend>

  <export>

  </export>
</package>
